[package]
name = "devd-rs"
version = "0.3.1"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "FreeBSD", "DragonFlyBSD", "devd", "hotplug" ]
categories = [ "os::unix-apis" ]
description = "An interface to devd, the device hotplug daemon on FreeBSD and DragonFlyBSD"
license = "Unlicense/MIT"
readme = "README.md"
homepage = "https://github.com/myfreeweb/devd-rs"
repository = "https://github.com/myfreeweb/devd-rs"

[dependencies]
nom = { version = "5", default-features = false, features = ["std"] }
libc = "0"
