[package]
name = "devd-rs"
version = "0.3.2"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "FreeBSD", "DragonFlyBSD", "devd", "hotplug" ]
categories = [ "os::unix-apis" ]
description = "An interface to devd, the device hotplug daemon on FreeBSD and DragonFlyBSD"
license = "Unlicense/MIT"
readme = "README.md"
homepage = "https://github.com/unrelentingtech/devd-rs"
repository = "https://github.com/unrelentingtech/devd-rs"
edition = "2018"

[dependencies]
libc = "0"
nom = { version = "7", default-features = false, features = ["std"] }
nom-supreme = "0.6.0"
